--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "devops-toolbox",
-  "version": "1.0.0",
+  "name": "@exaprint/devops-toolbox",
+  "version": "0.0.1",
   "description": "DevOps Toolbox [DOTbox]",
   "scripts": {
     "test": "dotbox test",
