--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@exaprint/devops-toolbox",
+  "name": "devops-toolbox",
   "version": "1.3.0",
   "description": "DevOps Toolbox [DOTbox]",
   "scripts": {
