--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devops-toolbox",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "DevOps Toolbox [DOTbox]",
   "scripts": {
     "test": "./index.js test",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/BasileTrujillo/devops-toolbox.git"
+    "url": "https://gitlab.com/BasileTrujillo/devops-toolbox.git"
   },
   "bugs": {
     "url": "https://gitlab.com/BasileTrujillo/devops-toolbox/issues"
