--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devops-toolbox",
-  "version": "1.3.1",
-  "description": "DevOps Toolbox [DOTbox]",
+  "version": "1.3.2",
+  "description": "DevOps Toolbox [Dotbox]",
   "scripts": {
     "test": "./index.js test",
     "lint": "./index.js lint",
