--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devops-toolbox",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "DevOps Toolbox [Dotbox]",
   "scripts": {
     "test": "./index.js test",
@@ -37,7 +37,8 @@
     "joi": "^10.2.2",
     "merge": "^1.2.0",
     "recursive-readdir": "^2.1.1",
-    "retry": "^0.10.1"
+    "retry": "^0.10.1",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "chai": "3.5.0",
